force-app/main/default/objects/Order/fields/Buyer_Accepts_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Accepts_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buyer Accepts Marketing</label>
    <type>Checkbox</type>
</CustomField>