force-app/main/default/objects/Order/fields/Current_Total_PriceSet_Shop_Money_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Total_PriceSet_Shop_Money_Amount__c</fullName>
    <label>Current Total PriceSet Shop Money Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>