force-app/main/default/objects/Order/fields/CurrentTotalPriceSetPresentment_Am__c.field-meta.xml
<CustomField>
    <fullName>CurrentTotalPriceSetPresentment_Am__c</fullName>
    <label>Total Price Set Presentment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>