force-app/main/default/objects/Order/fields/Estimated_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Taxes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimated Taxes</label>
    <type>Checkbox</type>
</CustomField>