force-app/main/default/objects/Order/fields/Fullfillment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fullfillment_Status__c</fullName>
    <label>Fullfillment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fulfilled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>