force-app/main/default/objects/Order/fields/Fullfilment_Status__c.field-meta.xml
<CustomField>
    <fullName>Fullfilment_Status__c</fullName>
    <label>Fullfilment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fulfilled</fullName>
            </value>
            <value>
                <fullName>Unfulfilled</fullName>
                <default>true</default>
                <label>Unfulfilled</label>
            </value>
            <value>
                <fullName>Partially fulfilled</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>