force-app/main/default/objects/Order/fields/Gift_Card__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Card</label>
    <type>Checkbox</type>
</CustomField>