force-app/main/default/objects/Order/fields/Order_URL__c.field-meta.xml
<CustomField>
    <fullName>Order_URL__c</fullName>
    <label>Order URL</label>
    <type>Url</type>
</CustomField>