force-app/main/default/objects/Order/fields/Shopify_Customer__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shopify Customer</label>
    <referenceTo>Shopify_Customer__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>