force-app/main/default/objects/Order/fields/Shopify_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Shopify Order Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>