force-app/main/default/objects/Order/fields/Shopify_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Order_Number__c</fullName>
    <label>Shopify Order Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>