force-app/main/default/objects/Order/fields/Shopify_URL__c.field-meta.xml
<CustomField>
    <fullName>Shopify_URL__c</fullName>
    <formula>HYPERLINK(
    &quot;https://admin.shopify.com/store/teach-every-nation/orders/&quot; &amp; Shopify_Order_Id__c,
    &quot;View Shopify Order&quot;,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shopify URL</label>
    <type>Text</type>
</CustomField>