force-app/main/default/objects/Order/fields/Sub_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_Price__c</fullName>
    <label>Sub Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>