force-app/main/default/objects/Order/fields/Total_Line_Items_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Items_Price__c</fullName>
    <label>Total Line Items Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>