force-app/main/default/objects/Order/fields/Total_Price_Set_Shop_Money_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Set_Shop_Money_Currency_Code__c</fullName>
    <label>Total Price Set Shop Money Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>